--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "author": "JayDJayG <j.d.guzman.v@gmail.com>",
     "license": "MIT",
     "devDependencies": {
+        "@jest/types": "^27.5.1",
         "@types/jest": "^27.4.1",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.4",
+        "ts-node": "^10.7.0",
         "tsc": "^2.0.4",
         "tslint": "^6.1.3",
         "typescript": "^4.6.3"
