--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "author": "JayDJayG <j.d.guzman.v@gmail.com>",
     "license": "MIT",
     "devDependencies": {
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
         "@jest/types": "^27.5.1",
+        "@swc/jest": "^0.2.20",
         "@types/jest": "^27.4.1",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.4",
